@@ -99,7 +99,7 @@ int caml_global_barrier_num_domains(void);
 
 int caml_domain_is_terminating(void);
 
-CAMLextern void caml_domain_set_name(char*);
+CAMLextern void caml_set_domain_thread_name(char*);
 
 #endif /* CAML_INTERNALS */
 
