@@ -61,6 +61,7 @@ static void init_startup_params(void)
   }
 #endif
   params.trace_level = 0;
+  params.assign_domain_thread_names = 0;
   params.cleanup_on_exit = 0;
   params.print_magic = 0;
   params.print_config = 0;
@@ -102,6 +103,7 @@ void caml_parse_ocamlrunparam(void)
       case 'R': break; /*  see stdlib/hashtbl.mli */
       case 's': scanmult (opt, &params.init_minor_heap_wsz); break;
       case 't': scanmult (opt, &params.trace_level); break;
+      case 'T': scanmult (opt, &params.assign_domain_thread_names); break;
       case 'v': scanmult (opt, &params.verb_gc); break;
       case 'V': scanmult (opt, &params.verify_heap); break;
       case 'W': scanmult (opt, &caml_runtime_warnings); break;
